[Mac] Do not open the reload button menu on click-hold unless DevTools is open.

After abf34e4c705851875cd1b390b43debfd85a01fb7 [formerly f7fd12c1dedd498830bc2e9d049687749dbadcf9], the menu could be opened by
click-hold-drag even if DevTools were not open, due to the way MenuButton
works. The menu should only be avaiable if DevTools is open.

This CL adds a new openMenuOnClickHold property to MenuButton, defaulting
to YES, that can be used to disable the click-hold-drag behavior of the
button. This is now set for the reload button.

In addition, this fixes, enables, and expands MenuButtonTest.OpenOnClickAndHold.

Bug: 739467
Bug: 517384
Change-Id: I70d900964734dd5c30f2d97fdfdaa32cd4551544
Reviewed-on: https://chromium-review.googlesource.com/562116
Reviewed-by: Avi Drissman <avi@chromium.org>
Commit-Queue: Robert Sesek <rsesek@chromium.org>
Cr-Commit-Position: refs/heads/master@{#484685}
Former-commit-id: 36969c47fb5943856ceb8e76dbc65c7df662f0b5