chrome/browser/ui/cocoa/toolbar/reload_button_cocoa.mm
@@ -154,6 +154,7 @@ const int kReloadMenuCommands[]  = {
 
 - (void)setMenuEnabled:(BOOL)enabled {
   [self setOpenMenuOnRightClick:enabled];
+  [self setOpenMenuOnClickHold:enabled];
 }
 
 - (void)setCommandUpdater:(CommandUpdater*)commandUpdater {
