chrome/browser/ui/cocoa/menu_button_unittest.mm
@@ -8,6 +8,7 @@
 #import "chrome/browser/ui/cocoa/clickhold_button_cell.h"
 #import "chrome/browser/ui/cocoa/test/cocoa_test_helper.h"
 #import "chrome/browser/ui/cocoa/test/menu_test_observer.h"
+#include "ui/events/test/cocoa_test_event_utils.h"
 
 namespace {
 
@@ -24,8 +25,8 @@ class MenuButtonTest : public CocoaTest {
     [[test_window() contentView] addSubview:button_];
   }
 
-  NSMenu* CreateMenu() {
-    NSMenu* menu = [[NSMenu alloc] initWithTitle:@""];
+  base::scoped_nsobject<NSMenu> CreateMenu() {
+    base::scoped_nsobject<NSMenu> menu([[NSMenu alloc] initWithTitle:@""]);
     [menu insertItemWithTitle:@"" action:nil keyEquivalent:@"" atIndex:0];
     [menu insertItemWithTitle:@"foo" action:nil keyEquivalent:@"" atIndex:1];
     [menu insertItemWithTitle:@"bar" action:nil keyEquivalent:@"" atIndex:2];
@@ -33,25 +34,20 @@ class MenuButtonTest : public CocoaTest {
     return menu;
   }
 
-  NSEvent* MouseEvent(NSEventType eventType) {
+  NSEvent* MouseEvent(NSEventType type) {
     NSPoint location;
-    if (button_)
+    if (button_) {
+      // Offset the button's origin to ensure clicks aren't routed to the
+      // border, which may not trigger.
       location = [button_ frame].origin;
-    else
+      location.x += 10;
+      location.y += 10;
+    } else {
       location.x = location.y = 0;
+    }
 
-    NSGraphicsContext* context = [NSGraphicsContext currentContext];
-    NSEvent* event = [NSEvent mouseEventWithType:eventType
-                                        location:location
-                                   modifierFlags:0
-                                       timestamp:0
-                                    windowNumber:[test_window() windowNumber]
-                                         context:context
-                                     eventNumber:0
-                                      clickCount:1
-                                        pressure:1.0F];
-
-    return event;
+    return cocoa_test_event_utils::MouseEventAtPointInWindow(location, type,
+                                                             test_window(), 1);
   }
 
   MenuButton* button_;  // Weak, owned by test_window().
@@ -90,28 +86,51 @@ TEST_F(MenuButtonTest, OpenOnClick) {
   EXPECT_FALSE([observer isOpen]);
 }
 
-// Test classic Mac menu behavior.
-TEST_F(MenuButtonTest, DISABLED_OpenOnClickAndHold) {
-  base::scoped_nsobject<NSMenu> menu(CreateMenu());
+void OpenOnClickAndHold(MenuButtonTest* test, BOOL does_open_on_click_hold) {
+  base::scoped_nsobject<NSMenu> menu(test->CreateMenu());
   ASSERT_TRUE(menu);
+
+  MenuButton* button = test->button_;
 
   base::scoped_nsobject<MenuTestObserver> observer(
       [[MenuTestObserver alloc] initWithMenu:menu]);
   ASSERT_TRUE(observer);
   [observer setCloseAfterOpening:YES];
 
-  [button_ setAttachedMenu:menu];
-  [button_ setOpenMenuOnClick:YES];
+  [button setAttachedMenu:menu];
+  [button setOpenMenuOnClick:NO];
+  [button setOpenMenuOnClickHold:does_open_on_click_hold];
 
   EXPECT_FALSE([observer isOpen]);
   EXPECT_FALSE([observer didOpen]);
 
-  // Should open the menu.
-  NSEvent* event = MouseEvent(NSLeftMouseDown);
-  [test_window() sendEvent:event];
+  // Post a click-hold-drag event sequence in reverse. The final drag events
+  // needs to have a location that is far enough away from the initial drag
+  // point to cause the menu to open.
+  NSEvent* event = cocoa_test_event_utils::MouseEventAtPointInWindow(
+      NSMakePoint(600, 600), NSLeftMouseUp, test->test_window(), 0);
+  [NSApp postEvent:event atStart:YES];
 
-  EXPECT_TRUE([observer didOpen]);
+  event = cocoa_test_event_utils::MouseEventAtPointInWindow(
+      NSMakePoint(500, 500), NSLeftMouseDragged, test->test_window(), 0);
+  [NSApp postEvent:event atStart:YES];
+
+  [NSApp postEvent:test->MouseEvent(NSLeftMouseDragged) atStart:YES];
+
+  // This will cause the tracking loop to start.
+  [button mouseDown:test->MouseEvent(NSLeftMouseDown)];
+
+  EXPECT_EQ(does_open_on_click_hold, [observer didOpen]);
   EXPECT_FALSE([observer isOpen]);
+}
+
+// Test classic Mac menu behavior.
+TEST_F(MenuButtonTest, OpenOnClickAndHold) {
+  OpenOnClickAndHold(this, YES);
+}
+
+TEST_F(MenuButtonTest, OpenOnClickAndHoldDisabled) {
+  OpenOnClickAndHold(this, NO);
 }
 
 TEST_F(MenuButtonTest, OpenOnRightClick) {
